# Wifibot

./: CMakeLists.txt  Image_explications.xcf  Makefile  Makefile.Debug  Makefile.Release  Wifibot.pro  boutoncamera.cpp  boutoncamera.h  boutondirectionnel.ui  cameravid.cpp  cameravideo.cpp  cameravideo.h  clienttcp.cpp  clienttcp.h  connect.cpp  connect.h  fenetreoption.cpp  fenetreoption.h  fenetreoption.ui  main.cpp  object_script.testwifibot.Debug  object_script.testwifibot.Release  relacherboutons.cpp  relacherboutons.h  resources.qrc  testwifibot.pro  testwifibot.pro.user.18  testwifibot.pro.user.3.2-pre1  trame.cpp  trame.h  ui_fenetreoption.h  ui_wifibot.h  wifibot.cpp  wifibot.cpp.autosave  wifibot.h  wifibot.ui  winsock2.h
Wifibot/: boutondirectionnel.cpp  boutondirectionnel.h  cameravid.h  trame.h  wifibot.h  wifibot.ui
debug/: moc_boutoncamera.cpp  moc_boutondirectionnel.cpp  moc_cameravid.cpp  moc_clienttcp.cpp  moc_fenetreoption.cpp  moc_wifibot.cpp
